chore: update swagger doc
